Added realistic AI textures for snake and mouse

--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Snake Game</title>
+    <title>Realistic Snake Game</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>🐍 Snake Game</h1>
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <div id="scoreBoard">
-        <h2>Score: <span id="score">0</span></h2>
+    <h1>🐍 Realistic Snake Game</h1>
+    <canvas id="gameCanvas" width="600" height="600"></canvas>
+    <div id="controls">
         <button id="startBtn" onclick="startGame()">▶ Start Game</button>
     </div>
     <audio id="eatSound" src="https://freesound.org/data/previews/404/404415_5121236-lq.mp3"></audio>
